# FT2SXR

./: .gitignore  .gitmodules  README.md  adc.ini  amp_last.csv  amp_last.xlsx  app4test.py  control.py  system.py
220715/: SXR220715145936.h5  SXR220715150001.h5  SXR220715180954.h5
core/: adc_logger.py  compile_proto.bat  compile_proto.sh  console.py  core.py  fileutils.py  ft2_test.py  ft2sxr.py  logger.py  netmanagers.py  runner.py  sxr_protocol.proto  sxr_protocol.py  sxr_protocol_pb2.py
data/: filenode.py  storage.py
dev/amptek/: ascii.py  dump.py  netfinder.py  protocol.py  px5.py  px5_ascii.csv
dev/hardware/: hard_settings.ini  hard_settings.txt  table.py
dev/insys/: adc.py  adc_additional.ini  reference_adc.ini
dev/journal/: jou_settings.ini  jou_settings.txt  journal.py
dev/tokamak/: tok_settings.ini  tok_settings.txt  tokamak.py
dev/tubl/: GSA.py  amp_settings.ini  amp_settings.txt  amplifier.py  gsa_settings.ini  gsa_settings.txt
insys/: BardyEnv.sh  Makefile  README
insys/AMBZYNQ/: ddzynq.h  zynqregs.h
insys/BRDINC/: brd.hxx  brderr.h  ctrl.h  utypes.h  utypes_linux.h
insys/BRDLIBS/: BRDSERV.H  IOSrv.cpp  Plx9080.h  StreamSrvFotr.cpp  adm2if.h  basemodule.cpp  basemodule.h  basestrm.cpp  basestrm.h  basesvm.cpp  basesvm.h  bserv.cpp  bserv.h  fmove32.h  iosrv.h  isdbsupp.cpp  isdbsupp.h  jamdll.h  jamdll.lib  module.h  reg_rw_spd_full.cpp  regsrv.cpp  rw_i2c.cpp  service.cpp  service.h  streamsrv.cpp  streamsrv.h  (+3 more)
insys/EXAM/exam_adc/: .gitignore  CMakeLists.txt  adc_ctrl.cpp  build.bat  build_arm.bat  compile_proto.bat  exam_adc.cpp  exam_protocol.pb.cc  exam_protocol.pb.h  exam_protocol.proto  exam_protocol_pb2.py  mem_ctrl.cpp  netsend.cpp  netsend.h  netwatch.py  send.cpp  send.py
ui/: ADCLogUI.py  ADCLogUIDesign.py  ADCLogUIDesign.ui  ADCUI.py  ADCUIDesign.py  ADCUIDesign.ui  AmplifierUI.py  AmplifierUIDesign.py  AmplifierUIDesign.ui  CalibrationSettingsUI.py  CalibrationSettingsUIDesign.py  CalibrationSettingsUIDesign.ui  CentralWidgetUI.py  CentralWidgetUIDesign.py  CentralWidgetUIDesign.ui  GSAUI.py  GSAUIDesign.py  GSAUIDesign.ui  MainWindow.py  MainWindowUIDesign.py  MainWindowUIDesign.ui  MeasurementSettingsUI.py  MeasurementSettingsUIDesign.py  MeasurementSettingsUIDesign.ui  MiniX2UI.py  MiniX2UIDesign.py  MiniX2UIDesign.ui  PX5UI.py  PX5UIDesign.py  PX5UIDesign.ui  PX5_big.ui  PX5_bigDesign.py  PX5_bigUI.py  PlotterUI.py  PlotterUIDesign.py  PlotterUIDesign.ui  WarningUI.py  WarningUIDesign.py  WarningUIDesign.ui  amp_cal.csv  (+3 more)
utils/: netwatch.py  netwatch_adc.py  netwatch_adc_gui.py  send.py
(+394 files in other folders)
